crates/oxc_react_compiler/tests/snapshots/rules-of-hooks__error.invalid-hook-for.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/rules-of-hooks/error.invalid-hook-for.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Invariant: Unexpected empty block with `goto` terminal", labels: [LabeledSpan { label: Some("Unexpected empty block with `goto` terminal"), span: SourceSpan { offset: 43, length: 76 }, primary: false }], help: Some("Block bb5 is empty"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
