crates/oxc_react_compiler/tests/snapshots/rules-of-hooks__error.invalid-hook-if-consequent.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/rules-of-hooks/error.invalid-hook-if-consequent.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Hooks: Hooks must always be called in a consistent order, and may not be called conditionally. See the Rules of Hooks (https://react.dev/warnings/invalid-hook-call-warning)", labels: [LabeledSpan { label: None, span: SourceSpan { offset: 72, length: 7 }, primary: false }], help: None, note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
